[build-system]
requires = ["flit_core>=3.11"]
build-backend = "flit_core.buildapi"

[project]
name = "masked-lexical-substitution"
version = "0.1.0"
description = "Context-aware lexical substitution with lightweight LLMs"
readme = "README.md"
authors = [
    { name = "Shamsuddin Ahmed", email = "info@shamspias.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["NLP", "lexical substitution", "LLM", "semantic", "SemEval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]

# Core runtime dependencies
dependencies = [
    "llama-cpp-python>=0.3.8", # quantised GGUF inference
    "transformers>=4.51.3", # HF fallback models
    "sentence-transformers>=4.1.0", # SBERT similarity / ranking
    "spacy>=3.8.5", # POS tagging
    "tqdm>=4.67.1", # progress bars
    "accelerate>=1.6.0", # CPU / Metal dispatch helpers
    "safetensors>=0.5.3", # faster model loading
]

[project.optional-dependencies]
# Extra packages for development & testing
dev = [
    "black>=25.1.0",
    "ruff>=0.11.6",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ipykernel>=6.29.5",
]

[project.urls]
Homepage = "https://github.com/shamspias/masked-lexical-substitution"
Issues = "https://github.com/shamspias/masked-lexical-substitution/issues"

[project.scripts]
lexsublm = "lexsublm.cli:main"
