[build-system]
requires      = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "lexsublm-lite"
version         = "0.2.0"
description     = "Lightweight context‑aware lexical substitution toolkit"
readme          = "README.md"
authors         = [{name = "Shamsuddin Ahmed", email = "info@shamspias.com"}]
license         = "MIT"                   # ← SPDX string (PEP 639) :contentReference[oaicite:2]{index=2}
requires-python = ">=3.10"
dependencies    = [
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "bitsandbytes>=0.42.0",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "llama-cpp-python>=0.3.8",
    "protobuf>=6.30.2",
    "orjson>=3.10.16",
    "accelerate>=0.26.0",
    "tabulate2>=1.10.0",
    "tqdm>=4.67.1"
]

# **** EXPLICIT PACKAGE LIST ****
[tool.setuptools]
packages = ["lexsublm_lite"]             # ← ignore data/ and notebooks/  :contentReference[oaicite:3]{index=3}

[project.scripts]
lexsub = "lexsublm_lite.cli:main"
